--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <span class="food-span">FOOD</span>
                 <span class="network-span">NETWORK</span>
             </h1>
-            <p>Eat Healthy to live healinv. Live healinv to live nabov</p>
+            <p>Eat Healthy to live healthy. Live healthy to live nabov</p>
            
         </footer>
            
